<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="default_location_label">New York City</string>
    <string name="default_location_latitude">40.68620</string>
    <string name="default_location_longitude">-74.02619</string>
    <string name="default_location_altitude">0</string>
    <string name="default_units_length">METRIC</string>
    <string name="default_timezone">America/New_York</string>
    <string name="configAction_refreshLocation">Refresh</string>
    <string name="configAction_addLocation">Location</string>
    <string name="configAction_mapLocation">Map</string>
    <string name="configAction_mapLocation_chooser">View location using</string>
    <string name="configAction_mapLocation_noapp">Unable to find map application!</string>
    <string name="configAction_showCalendar">Calendar</string>
    <string name="configAction_setAlarm">Set Alarm</string>
    <string name="configAction_setTimeZone">Set Time Zone</string>
    <string name="configAction_setDate">Set Date</string>
    <string name="configAction_viewDate">View date</string>
    <string name="configAction_viewDateWith">View date</string>
    <string name="configAction_share">Share</string>
    <string name="configAction_export">Export</string>
    <string name="configAction_import">Import</string>
    <string name="configAction_info">More Info</string>
    <string name="configAction_sortBy">Sort by</string>
    <string name="configAction_sunDialog">Sun Position</string>
    <string name="configAction_equinoxDialog">Solstice / Equinox</string>
    <string name="configAction_worldMap">World Map</string>
    <string name="configAction_openNavDrawer">Open navigation</string>
    <string name="configAction_closeNavDrawer">Close navigation</string>
    <string name="configAction_clock">Clock</string>
    <string name="configAction_lightGraphDialog">Sunlight</string>
    <string name="configAction_lightGraph">Light Graph</string>
    <string name="configAction_lineGraph">Altitude Graph</string>
    <string name="configAction_seekAltitude">Seek Altitude</string>
    <string name="configAction_search">Search</string>
    <string name="configAction_deselect">Clear Selection</string>
    <string name="configAction_moon">Moon</string>
    <string name="configAction_help">Help</string>
    <string name="configAction_onlineHelp">Online Help</string>
    <string name="configAction_appDetails">App info</string>
    <string name="configAction_overflow">More</string>
    <string name="configAction_options">Options</string>
    <string name="configAction_settings">Settings</string>
    <string name="configAction_aboutWidget">About</string>
    <string name="shortcut_suninfo_short">@string/configAction_sunDialog</string>
    <string name="shortcut_suninfo_long">@string/configAction_sunDialog</string>
    <string name="shortcut_suninfo_disabled">@string/configAction_sunDialog</string>
    <string name="shortcut_mooninfo_short">@string/configAction_moon</string>
    <string name="shortcut_mooninfo_long">@string/configAction_moon</string>
    <string name="shortcut_mooninfo_disabled">@string/configAction_moon</string>
    <string name="shortcut_widgetlist_short">@string/configLabel_widgetList</string>
    <string name="shortcut_widgetlist_long">@string/configLabel_widgetList</string>
    <string name="shortcut_widgetlist_disabled">@string/configLabel_widgetList</string>
    <string name="shortcut_themelist_short">@string/configLabel_widgetThemeList</string>
    <string name="shortcut_themelist_long">@string/configLabel_widgetThemeList</string>
    <string name="shortcut_themelist_disabled">@string/configLabel_widgetThemeList</string>
    <string name="shortcut_worldmap_short">@string/configAction_worldMap</string>
    <string name="shortcut_worldmap_long">@string/configAction_worldMap</string>
    <string name="shortcut_worldmap_disabled">@string/configAction_worldMap</string>
    <string name="shortcut_alarmclock_addalarm_short">@string/alarmMode_alarm</string>
    <string name="shortcut_alarmclock_addalarm_long">@string/alarmMode_alarm</string>
    <string name="shortcut_alarmclock_addalarm_disabled">@string/alarmMode_alarm</string>
    <string name="shortcut_alarmclock_addnotify_short">@string/alarmMode_notification</string>
    <string name="shortcut_alarmclock_addnotify_long">@string/alarmMode_notification</string>
    <string name="shortcut_alarmclock_addnotify_disabled">@string/alarmMode_notification</string>
    <string name="shortcut_alarmclock_addnotify1_short">@string/alarmMode_notification1</string>
    <string name="shortcut_alarmclock_addnotify1_long">@string/alarmMode_notification1</string>
    <string name="shortcut_alarmclock_addnotify1_disabled">@string/alarmMode_notification1</string>
    <string name="nextDay">Next Day</string>
    <string name="prevDay">Previous Day</string>
    <string name="nextYear">Next Year</string>
    <string name="prevYear">Previous Year</string>
    <string name="spanTag_warning">Warning!</string>
    <string name="timezoneField"><xliff:g id="timezone" example="US/Mountain">%1$s</xliff:g> <xliff:g id="dstTag">[d]</xliff:g><xliff:g id="warningTag">[w]</xliff:g></string>
    <string name="timezoneWarning"><xliff:g id="warningTag">[w]</xliff:g> The time zone may be wrong for this location.</string>
    <string name="timezoneWarningNote"><xliff:g id="tzID">%s</xliff:g> is <xliff:g id="timeSpan">%s</xliff:g> from Local Mean Time (<xliff:g id="locationName">%s</xliff:g>).</string>
    <string name="timezoneExtraDST"><xliff:g id="dstTag">[d]</xliff:g> <xliff:g id="dstOffset" example="+1h">%1$s</xliff:g> daylight saving</string>
    <string name="timezoneExtraDST_short"><xliff:g id="dstOffset" example="+1h">%1$s</xliff:g> dst</string>
    <string name="timezoneExtraApparentSolar"><xliff:g id="dstTag">[d]</xliff:g> <xliff:g id="dstOffset" example="+8m">%1$s</xliff:g> equation of time</string>
    <string name="timezoneExtraApparentSolar_short"><xliff:g id="dstOffset" example="+8m">%1$s</xliff:g> eot</string>
    <string name="dateField"><xliff:g id="dateDesc" example="Today">%1$s</xliff:g>\n<xliff:g id="date" example="Jul 8, 2016">%2$s</xliff:g> <xliff:g id="warningTag">[w]</xliff:g></string>
    <string name="dateWarning"><xliff:g id="warningTag">[w]</xliff:g> The date is set to a day other than today.</string>
    <string name="past_today">Past</string>
    <string name="past_n">Past (%1$s)</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="future_today">Future</string>
    <string name="future_n">Future (%1$s)</string>
    <string name="length_day"><xliff:g id="timeSpan" example="12h">%1$s</xliff:g> in the day</string>
    <string name="length_light"><xliff:g id="timeSpan" example="12h 50m">%1$s</xliff:g> of usable light</string>
    <string name="length_twilight1"><xliff:g id="timeSpan1" example="10h 5m">%1$s</xliff:g></string>
    <string name="length_twilight1e_pos"><xliff:g id="timeSpan1" example="10h 5m">%1$s</xliff:g> [+<xliff:g id="timeSpan1" example="+30s">%2$s</xliff:g>]</string>
    <string name="length_twilight1e_neg"><xliff:g id="timeSpan1" example="10h 5m">%1$s</xliff:g> [-<xliff:g id="timeSpan1" example="+30s">%2$s</xliff:g>]</string>
    <string name="length_twilight2"><xliff:g id="timeSpan1" example="30m">%1$s</xliff:g> | <xliff:g id="timeSpan2" example="30m">%2$s</xliff:g></string>
    <string name="length_delimiter">|</string>
    <string name="timeMode_tropical_year">Tropical Year</string>
    <string name="length_tropical_year"><xliff:g id="timeSpan1" example="365d 5h 41m">%1$s</xliff:g>\n<xliff:g id="fractionalDays" example="365.24">%2$s</xliff:g></string>
    <string name="moon_illumination"><xliff:g id="illuminationPercent" example="50%">%1$s</xliff:g> illuminated</string>
    <string name="moon_illumination_short"><xliff:g id="illuminationPercent" example="50%">%1$s</xliff:g></string>
    <string name="moon_illumination_at"><xliff:g id="illuminationPercent" example="50%">%1$s</xliff:g> \@ <xliff:g id="illuminationTime" example="11:55">%2$s</xliff:g></string>
    <string name="moon_illumination_range"><xliff:g id="illuminationPercent" example="50%">%1$s</xliff:g>–<xliff:g id="illuminationPercent" example="60%">%2$s</xliff:g></string>
    <string name="delta_day_tomorrow">Tomorrow will be</string>
    <string name="delta_day_yesterday">Yesterday was</string>
    <string name="delta_day_shorter">shorter</string>
    <string name="delta_day_longer">longer</string>
    <string name="since">since</string>
    <string name="until">until</string>
    <string name="until_end">until end</string>
    <string name="sunrise_short">Sunrise</string>
    <string name="moonrise">Moonrise</string>
    <string name="configLabel_general">General</string>
    <string name="configLabel_general_calculator">Data Source:</string>
    <string name="timeMode_civil">Civil Twilight</string>
    <string name="timeMode_nautical">Nautical Twilight</string>
    <string name="timeMode_astronomical">Astronomical Twilight</string>
    <string name="widgetMode_sunPosMap_simplerectangular">Basic Map</string>
    <string name="widgetMode_sunPosMap_simpleazimuthal">Polar [north]</string>
    <string name="widgetMode_sunPosMap_simpleazimuthal_south">Polar [south]</string>
    <string name="widgetMode_sunPosMap_bluemarble">Blue Marble</string>
    <string name="widgetMode_sunPosMap_simpleazimuthal_location">Azimuthal Equidistant</string>
    <string name="timezoneMode_current">System Time Zone</string>
    <string name="time_lmst">Local Sidereal Time</string>
    <string name="time_gmst">Greenwich Sidereal Time</string>
    <string name="time_utc">Coordinated Universal Time</string>
    <string name="time_localMean">Local Mean Time</string>
    <string name="time_apparent">Apparent Solar Time</string>
    <string name="configLabel_timezone">Time Zone</string>
    <string name="trackingMode_recent">Recent Event</string>
    <string name="trackingMode_closest">Nearest Event</string>
    <string name="trackingMode_soonest">Upcoming Event</string>
    <string name="configLabel_general_trackingMode">Track:</string>
    <string name="configAction_editAlarm">Edit</string>
    <string name="configAction_deleteAlarm">Delete</string>
    <string name="configAction_saveAlarm">Save</string>
    <string name="configAction_enableAlarm">Save &amp; Enable</string>
    <string name="configAction_disableAlarm">Save &amp; Disable</string>
    <string name="configAction_set">Set</string>
    <string name="configAction_setBedtime">Set bedtime</string>
    <string name="configAction_setBedtime_fromAlarm">Set bedtime from alarm</string>
    <string name="configAction_setBedtime_toNow">Set bedtime to now</string>
    <string name="configLabel_getFix_maxElapse">Location time limit</string>
    <string name="configLabel_getFix_maxElapse_summary">Give up after <xliff:g id="maxElapseDisplay" example="15 seconds">%s</xliff:g></string>
    <string name="configLabel_getFix_maxAge">Location recent max age</string>
    <string name="configLabel_getFix_maxAge_summary"><xliff:g id="maxAgeDisplay" example="1 minute">%s</xliff:g> considered recent</string>
    <string name="configLabel_locale">Language</string>
    <string name="configLabel_localeMode">Mode</string>
    <string name="configLabel_localeMode_summary"><xliff:g id="localeMode_display" example="System Locale">%s</xliff:g></string>
    <string name="configLabel_localeSelect">Language</string>
    <string name="configLabel_localeSelect_summary"><xliff:g id="locale_display" example="English">%s</xliff:g></string>
    <string name="graph_option_grid">Grid</string>
    <string name="graph_option_labels">Labels</string>
    <string name="graph_option_axis">Axis</string>
    <string name="graph_option_points">Points</string>
    <string name="app_name">Suntimes</string>
</resources>