<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_location_refresh"
          android:icon="?attr/icActionGPS"
          android:title="@string/configAction_refreshLocation"
          app:showAsAction="always" />

    <item android:id="@+id/action_location_add"
          android:icon="?attr/icActionPlace"
          android:title="@string/configAction_addLocation"
          app:showAsAction="always" />

    <item android:id="@+id/action_location_show"
          android:icon="?attr/icActionMap"
          android:title="@string/configAction_mapLocation"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/action_alarm"
          android:icon="?attr/icActionAlarm"
          android:title="@string/configAction_setAlarm"
          app:showAsAction="never" />

    <item android:id="@+id/action_date"
          android:icon="?attr/icActionTime"
          android:title="@string/configAction_setDate"
          app:showAsAction="never" />

    <item android:id="@+id/action_timezone"
          android:icon="?attr/icActionTime"
          android:title="@string/configAction_setTimeZone"
          app:showAsAction="never" />

    <item android:id="@+id/action_moon"
          android:icon="@drawable/ic_moon"
          android:title="@string/configAction_moon"
          app:showAsAction="never" />

    <item android:id="@+id/action_sunposition"
          android:icon="@drawable/ic_sun"
          android:title="@string/configAction_sunDialog"
          app:showAsAction="never" />

    <item android:id="@+id/action_equinox"
          android:icon="?attr/icActionAbout"
          android:title="@string/configAction_equinoxDialog"
          app:showAsAction="never" />

    <item android:id="@+id/action_settings"
          android:icon="?attr/icActionSettings"
          android:title="@string/configAction_settings"
          app:showAsAction="never" />

    <item android:id="@+id/action_help"
          android:icon="?attr/icActionHelp"
          android:title="@string/configAction_help"
          app:showAsAction="never" />

    <item android:id="@+id/action_about"
          android:icon="?attr/icActionAbout"
          android:title="@string/configAction_aboutWidget"
          app:showAsAction="never" />

</menu>