<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
    tools:targetApi="n_mr1">

    <shortcut
        android:shortcutId="shortcut_mooninfo"
        android:enabled="true"
        android:icon="@drawable/ic_moon"
        android:shortcutShortLabel="@string/shortcut_mooninfo_short"
        android:shortcutLongLabel="@string/shortcut_mooninfo_long"
        android:shortcutDisabledMessage="@string/shortcut_mooninfo_disabled">

        <intent
            android:action="suntimes.action.VIEW_MOON"
            android:targetPackage="com.forrestguice.suntimeswidget"
            android:targetClass="com.forrestguice.suntimeswidget.SuntimesActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_suninfo"
        android:enabled="true"
        android:icon="@drawable/ic_sun"
        android:shortcutShortLabel="@string/shortcut_suninfo_short"
        android:shortcutLongLabel="@string/shortcut_suninfo_long"
        android:shortcutDisabledMessage="@string/shortcut_suninfo_disabled">

        <intent
            android:action="suntimes.action.VIEW_SUN"
            android:targetPackage="com.forrestguice.suntimeswidget"
            android:targetClass="com.forrestguice.suntimeswidget.SuntimesActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_worldmap"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_worldmap"
        android:shortcutShortLabel="@string/shortcut_worldmap_short"
        android:shortcutLongLabel="@string/shortcut_worldmap_long"
        android:shortcutDisabledMessage="@string/shortcut_worldmap_disabled">   <!-- TODO: icon -->

        <intent
            android:action="suntimes.action.VIEW_WORLDMAP"
            android:targetPackage="com.forrestguice.suntimeswidget"
            android:targetClass="com.forrestguice.suntimeswidget.SuntimesActivity" />
    </shortcut>


    <!--<shortcut
        android:shortcutId="shortcut_themelist"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_themes"
        android:shortcutShortLabel="@string/shortcut_themelist_short"
        android:shortcutLongLabel="@string/shortcut_themelist_long"
        android:shortcutDisabledMessage="@string/shortcut_themelist_disabled">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.forrestguice.suntimeswidget"
            android:targetClass="com.forrestguice.suntimeswidget.themes.WidgetThemeListActivity" />
    </shortcut>-->

    <shortcut
        android:shortcutId="shortcut_widgetlist"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_widgets"
        android:shortcutShortLabel="@string/shortcut_widgetlist_short"
        android:shortcutLongLabel="@string/shortcut_widgetlist_long"
        android:shortcutDisabledMessage="@string/shortcut_widgetlist_disabled">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.forrestguice.suntimeswidget"
            android:targetClass="com.forrestguice.suntimeswidget.SuntimesWidgetListActivity" />
    </shortcut>

</shortcuts>