<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
    tools:targetApi="n_mr1">

    <shortcut
        android:shortcutId="shortcut_alarmclock_addalarm"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_alarm_add0"
        android:shortcutShortLabel="@string/shortcut_alarmclock_addalarm_short"
        android:shortcutLongLabel="@string/shortcut_alarmclock_addalarm_long"
        android:shortcutDisabledMessage="@string/shortcut_alarmclock_addalarm_disabled">

        <intent
            android:action="com.forrestguice.suntimeswidget.alarmclock.ADD_ALARM"
            android:targetPackage="com.forrestguice.suntimeswidget"
            android:targetClass="com.forrestguice.suntimeswidget.alarmclock.ui.AlarmClockActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_alarmclock_addnotify"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_alarm_add2"
        android:shortcutShortLabel="@string/shortcut_alarmclock_addnotify_short"
        android:shortcutLongLabel="@string/shortcut_alarmclock_addnotify_long"
        android:shortcutDisabledMessage="@string/shortcut_alarmclock_addnotify_disabled">

        <intent
            android:action="com.forrestguice.suntimeswidget.alarmclock.ADD_NOTIFICATION"
            android:targetPackage="com.forrestguice.suntimeswidget"
            android:targetClass="com.forrestguice.suntimeswidget.alarmclock.ui.AlarmClockActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_alarmclock_addnotify1"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_alarm_add1"
        android:shortcutShortLabel="@string/shortcut_alarmclock_addnotify1_short"
        android:shortcutLongLabel="@string/shortcut_alarmclock_addnotify1_long"
        android:shortcutDisabledMessage="@string/shortcut_alarmclock_addnotify1_disabled">

        <intent
            android:action="com.forrestguice.suntimeswidget.alarmclock.ADD_QNOTIFICATION"
            android:targetPackage="com.forrestguice.suntimeswidget"
            android:targetClass="com.forrestguice.suntimeswidget.alarmclock.ui.AlarmClockActivity" />
    </shortcut>

</shortcuts>