<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/configLabel_locale">

        <com.forrestguice.suntimeswidget.settings.ListPreference
            android:key="app_locale_mode"
            android:title="@string/configLabel_localeMode"
            android:dialogTitle="@string/configLabel_localeMode"
            android:summary="@string/configLabel_localeMode_summary"
            android:entries="@array/localeMode_display" android:entryValues="@array/localeMode_values"
            android:defaultValue="@string/def_app_locale_mode" />

        <com.forrestguice.suntimeswidget.settings.ListPreference
            android:key="app_locale"
            android:title="@string/configLabel_localeSelect"
            android:dialogTitle="@string/configLabel_localeSelect"
            android:summary="@string/configLabel_localeSelect_summary"
            android:entries="@array/locale_display" android:entryValues="@array/locale_values"
            android:defaultValue="@string/def_app_locale" />

    </PreferenceCategory>

</PreferenceScreen>