<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/configLabel_general">

        <ListPreference
            android:key="appwidget_0_general_calculator"
            android:title="@string/configLabel_general_calculator"
            android:dialogTitle="@string/configLabel_general_calculator"
            android:summary="%s"
            android:entries="@null" android:entryValues="@null" android:defaultValue="any" />

        <Preference android:title="Clear Places" android:key="general_clearplaces" />

        <Preference android:title="Export Places" android:key="general_exportplaces" />

        <ListPreference
            android:key="getFix_maxElapsed"
            android:title="@string/configLabel_getFix_maxElapse"
            android:dialogTitle="@string/configLabel_getFix_maxElapse"
            android:summary="@string/configLabel_getFix_maxElapse_summary"
            android:entries="@array/getFix_maxElapse_display" android:entryValues="@array/getFix_maxElapse_values"
            android:defaultValue="60000" />

        <ListPreference
            android:key="getFix_maxAge"
            android:title="@string/configLabel_getFix_maxAge"
            android:dialogTitle="@string/configLabel_getFix_maxAge"
            android:summary="@string/configLabel_getFix_maxAge_summary"
            android:entries="@array/getFix_maxAge_display" android:entryValues="@array/getFix_maxAge_values"
            android:defaultValue="300000" />

    </PreferenceCategory>

</PreferenceScreen>