<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="none">


        <item android:id="@+id/action_enable"
            android:icon="?attr/icActionEnableAlarm"
            android:title="@string/configAction_enableAlarm"
            app:showAsAction="always"
            android:orderInCategory="800" />

        <item android:id="@+id/action_save"
            android:icon="?attr/icActionSave"
            android:title="@string/configAction_saveAlarm"
            app:showAsAction="always"
            android:orderInCategory="810" />

        <item android:id="@+id/action_disable"
            android:icon="?attr/icActionCancel"
            android:title="@string/configAction_disableAlarm"
            app:showAsAction="always"
            android:orderInCategory="820" />

        <item android:id="@+id/action_delete"
            android:icon="?attr/icActionDelete"
            android:title="@string/configAction_deleteAlarm"
            app:showAsAction="never"
            android:orderInCategory="899" />

        <item android:id="@+id/action_options"
            android:icon="?attr/icActionSettings"
            android:title="@string/configAction_options"
            app:showAsAction="never"
            android:orderInCategory="950">
            <menu />    <!-- populated at runtime from menu/alarmcontext2 -->
        </item>

        <item android:id="@+id/action_about"
            android:icon="?attr/icActionAbout"
            android:title="@string/configAction_aboutWidget"
            app:showAsAction="never"
            android:orderInCategory="999" />

    </group>
</menu>
