<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="none">

        <item android:id="@+id/action_bedtime_edit"
            android:title="@string/configAction_editAlarm"
            app:showAsAction="never"
            android:icon="?attr/icActionEdit"
            android:orderInCategory="1" />

        <item android:id="@+id/action_bedtime_set_menu"
            android:title="@string/configAction_set"
            app:showAsAction="never"
            android:icon="?attr/icActionTime"
            android:orderInCategory="2">

            <menu>

                <item android:id="@+id/action_bedtime_set"
                    android:title="@string/configAction_setBedtime"
                    app:showAsAction="never"
                    android:icon="?attr/icActionTime"
                    android:orderInCategory="1" />

                <item android:id="@+id/action_bedtime_from_wakeup"
                    android:title="@string/configAction_setBedtime_fromAlarm"
                    app:showAsAction="never"
                    android:icon="?attr/icActionAlarm"
                    android:orderInCategory="2" />

                <item android:id="@+id/action_bedtime_now"
                    android:title="@string/configAction_setBedtime_toNow"
                    app:showAsAction="never"
                    android:icon="?attr/icActionTime"
                    android:orderInCategory="3" />

            </menu>

        </item>

        <item android:id="@+id/action_bedtime_delete"
            android:title="@string/configAction_deleteAlarm"
            app:showAsAction="never"
            android:icon="?attr/icActionDelete"
            android:orderInCategory="3" />

    </group>
</menu>
